--- a/index.html
+++ b/index.html
@@ -3,170 +3,213 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (sinónimos + fallback CSV)</title>
-<!--ID_SYS:AQNM_20251110_V4-->
+<title>Aquí Nomás — DEMO inteligente (sinónimos + fallback CSV + imágenes)</title>
+<!--ID_SYS:AQNM_20251110_V5-->
 <style>
-:root{--pri:#0b5cff;}
-body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
-.wrap{max-width:900px;margin:0 auto;padding:16px}
-h1{font-size:22px;margin:0 0 12px}
-.box{background:#fff;border:1px solid #e2e8f0;border-radius:12px;padding:12px;margin-bottom:12px}
-.row{display:flex;flex-wrap:wrap;gap:8px;align-items:center}
-.input{flex:1 1 200px;padding:10px 12px;border-radius:999px;border:1px solid #e2e8f0}
-.btn{border-radius:999px;border:1px solid transparent;padding:8px 12px;font-size:14px;cursor:pointer;background:var(--pri);color:#fff}
-.btn.ghost{background:#fff;color:#6b7280;border-color:#e2e8f0}
-.btn.secondary{background:#e5edff;color:#1e40af}
-.btn.mic{background:#fee2e2;color:#b91c1c}
-.tiny{font-size:12px;color:#6b7280;margin-top:4px}
-.card{border:1px solid #e2e8f0;border-radius:10px;padding:10px;margin-bottom:8px;background:#fff}
-.title{font-weight:700;margin-bottom:4px}
-.title span{font-weight:600;color:#555}
-.meta{font-size:12px;color:#566;margin-top:4px}
-.ok{padding:8px 10px;background:#eef9f1;border:1px solid #cfead8;border-radius:10px;margin-bottom:12px;color:#145a32;display:none}
-.err{padding:8px 10px;background:#fff3f3;border:1px solid #ffd2d2;border-radius:10px;margin-bottom:12px;color:#7a1a1a;display:none}
-.switch{display:inline-flex;align-items:center;gap:6px;font-size:12px;color:#445}
-.switch input{transform:scale(1.2)}
-@media(max-width:600px){.row{flex-direction:column;align-items:stretch}.input{width:100%}}
+:root {
+  --pri:#0b5cff;
+  --bg:#f2f4f8;
+}
+body {
+  font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+  margin:0;
+  background:var(--bg);
+  color:#0b1220;
+}
+.wrap {
+  max-width:900px;
+  margin:0 auto;
+  padding:16px;
+}
+h1 {
+  font-size:22px;
+  margin:0 0 12px;
+}
+.box {
+  background:#fff;
+  border:1px solid #e2e8f0;
+  border-radius:14px;
+  padding:12px 14px;
+  margin-bottom:14px;
+  box-shadow:0 2px 8px rgba(0,0,0,0.06);
+  display:flex;
+  align-items:center;
+  gap:12px;
+  transition:transform .15s ease,box-shadow .15s ease;
+}
+.box:hover {
+  transform:translateY(-2px);
+  box-shadow:0 4px 12px rgba(0,0,0,0.1);
+}
+.logo {
+  width:60px;
+  height:60px;
+  border-radius:50%;
+  object-fit:cover;
+  flex-shrink:0;
+  border:1px solid #d0d7de;
+  background:#fafafa;
+}
+.info {
+  flex:1;
+}
+.name {
+  font-weight:600;
+  color:#0b1220;
+}
+.rubro {
+  font-size:14px;
+  color:#555;
+}
+.dir {
+  font-size:13px;
+  color:#777;
+}
+.row {
+  display:flex;
+  flex-wrap:wrap;
+  gap:8px;
+  align-items:center;
+  margin-bottom:10px;
+}
+.input {
+  flex:1 1 200px;
+  padding:10px 12px;
+  border-radius:8px;
+  border:1px solid #cbd5e1;
+  font-size:15px;
+}
+button {
+  background:var(--pri);
+  color:#fff;
+  border:none;
+  border-radius:8px;
+  padding:10px 14px;
+  font-size:15px;
+  cursor:pointer;
+}
+button:hover {opacity:.9;}
+small {display:block;color:#666;margin-top:8px;font-size:13px;}
 </style>
 </head>
 <body>
 <div class="wrap">
-  <h1>🏷️ Aquí Nomás — DEMO inteligente (sinónimos + fallback CSV)</h1>
-  <div id="status" class="ok"></div>
-  <div id="error" class="err"></div>
-
-  <div class="box">
-    <div class="row">
-      <input id="qall" class="input" placeholder="Ej: 'quiero almorzar en el centro', 'comprar libros', 'comer helados en microcentro'"/>
-      <button id="micBtn" class="btn mic" title="Dictar por voz">🎤</button>
-      <button id="goBtn" class="btn">Buscar</button>
-      <button id="clearBtn" class="btn ghost">Limpiar</button>
-      <button id="locBtn" class="btn secondary" title="Usar mi ubicación">📍 Cerca</button>
-      <button id="refreshBtn" class="btn">Actualizar datos</button>
-    </div>
-    <div class="row" style="margin-top:10px">
-      <label class="switch"><input id="autoChk" type="checkbox"/> Auto (15s)</label>
-      <div class="tiny" id="srcHint"></div>
-      <div class="tiny" id="tsHint" style="margin-left:auto;text-align:right"></div>
-    </div>
-    <div class="tiny" id="gpsHint" style="margin-top:6px;display:none"></div>
-    <div class="tiny" id="intentHint" style="margin-top:4px;display:none"></div>
+  <h1>🔎 Aquí Nomás — versión inteligente</h1>
+  <div class="row">
+    <input id="busqueda" class="input" placeholder="¿Qué buscás? (Ej: almorzar en el centro)"/>
+    <button id="buscarBtn">Buscar</button>
+    <button id="vozBtn">🎤</button>
+    <button id="cercaBtn">Cerca</button>
+    <button id="limpiarBtn">Limpiar</button>
   </div>
-
-  <div id="results" class="box"></div>
+  <small>La búsqueda entiende sinónimos y funciona por voz o texto.</small>
+  <div id="resultados"></div>
 </div>
 
 <script>
-const CSV_URL="https://docs.google.com/spreadsheets/d/e/2PACX-1vSg0UeYMVZj0b9H2V63XS37oXlIwJ6SL4n-m6WJEbspzM5OP9QA3QF6qSw4fr81dw/pub?gid=1861393565&single=true&output=csv";
-const STATUS=document.getElementById("status"),ERR=document.getElementById("error"),SRC=document.getElementById("srcHint"),TSH=document.getElementById("tsHint"),GPS_HINT=document.getElementById("gpsHint"),INTENT_HINT=document.getElementById("intentHint");
-SRC.textContent="Fuente CSV: "+CSV_URL;
-let DATA=[],USER_POS=null,LOADED=false,refreshTimer=null;
+let locales = [];
+let sinonimos = {"almorzar":["comer","almuerzo","restaurante","plato del día"],
+                 "café":["cafetería","bar","espresso"],
+                 "helado":["postre","heladería"]};
 
-// --- UTILES ---
-function showStatus(m){STATUS.style.display=m?"block":"none";STATUS.textContent=m||"";}
-function showError(m){ERR.style.display=m?"block":"none";ERR.textContent=m||"";}
-function hideIntent(){INTENT_HINT.style.display="none";INTENT_HINT.textContent="";}
-function removeDiacritics(s){return String(s||"").normalize("NFD").replace(/[\u0300-\u036f]/g,"");}
-function norm(s){return removeDiacritics(String(s||"").toLowerCase()).replace(/[^a-z0-9\s]/g," ").replace(/\s+/g," ").trim();}
-function parseCSV(t){const r=t.trim().split(/\r?\n/).map(l=>l.split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(c=>c.replace(/^"|"$/g,"")));const h=r.shift().map(x=>x.trim().toLowerCase().replace(/\s+/g,"_"));return r.map(l=>Object.fromEntries(h.map((x,i)=>[x,l[i]||""])));}
-function parseCoord(v){if(!v)return NaN;let s=String(v).replace(",",".");let n=parseFloat(s);if(!isFinite(n)){const d=s.replace(/[^0-9]/g,"");if(d.length>=7)n=parseInt(d,10)/1e6;}if(Math.abs(n)>180)n/=1e6;return n;}
-function hav(a,b){const R=6371,toRad=x=>x*Math.PI/180;const dLat=toRad(b.lat-a.lat),dLng=toRad(b.lng-a.lng);const s1=Math.sin(dLat/2),s2=Math.sin(dLng/2);const A=s1*s1+Math.cos(toRad(a.lat))*Math.cos(toRad(b.lat))*s2*s2;return 2*R*Math.asin(Math.min(1,Math.sqrt(A)));}
+function normalizar(txt){
+  return txt.toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g,"");
+}
 
-// --- FALLBACK LOCAL ---
-const CSV_FALLBACK=`nombre_local,rubro,keywords,direccion,barrio,lat,lng
-Gastronomix,Restaurante,almuerzo comida gastronomia,"Av. Corrientes 500","microcentro",-34.6037,-58.3816
-Comiditas,Cafetería,almorzar merendar,"Lavalle 800","microcentro",-34.6045,-58.3811
-Hipocampo,Restaurante,almuerzo mariscos,"Reconquista 300","centro",-34.6019,-58.3750
-`;
-
-// --- CARGA CSV ---
-async function loadCSV(){
+async function cargarCSV(){
   try{
-    showError("");showStatus("Cargando CSV…");
-    const r=await fetch(CSV_URL+"&nocache="+Date.now(),{cache:"no-store"});
-    const txt=await r.text();
-    if(/^\s*<!doctype/i.test(txt) || txt.trim().length<50){
-      SRC.textContent="Fuente local (respaldo)";
-      parseAndStore(CSV_FALLBACK);
-      return;
-    }
-    parseAndStore(txt);
-    SRC.textContent="Fuente CSV: "+CSV_URL;
+    console.log("Cargando CSV…");
+    const resp = await fetch("https://docs.google.com/spreadsheets/d/e/2PACX-1vSg0UeYMVZj0b9H2V63XS37oXlIwJ6SL4n-m6WJEbspzM5OP9QA3QF6qSw4fr81dw/pub?gid=1861393565&single=true&output=csv");
+    const texto = await resp.text();
+    const filas = texto.trim().split("\n").map(f=>f.split(","));
+    const cab = filas.shift().map(c=>c.trim());
+    locales = filas.map(f=>{
+      let obj={};
+      cab.forEach((c,i)=>obj[c]=f[i]);
+      return obj;
+    });
+    console.log("CSV cargado:",locales.length,"filas");
   }catch(e){
-    SRC.textContent="Fuente local (respaldo)";
-    parseAndStore(CSV_FALLBACK);
+    console.error("Error al cargar CSV",e);
   }
 }
 
-function parseAndStore(txt){
-  const raw=parseCSV(txt);const barrios=new Set();
-  DATA=raw.map(row=>{
-    const nombre=row.nombre_local||row.nombre||row.local||"";
-    const rubro=row.rubro||"";const barrio=row.barrio||"";const dir=row.direccion||"";const kw=row.keywords||"";
-    const lat=parseCoord(row.lat),lng=parseCoord(row.lng);
-    const nombreNorm=norm(nombre),rubroNorm=norm(rubro),barrioNorm=norm(barrio),kwNorm=norm(kw);
-    const textNorm=norm([nombre,rubro,barrio,dir,kw].join(" "));
-    if(barrioNorm)barrios.add(barrioNorm);
-    return {row,nombre,rubro,barrio,dir,kw,lat,lng,nombreNorm,rubroNorm,barrioNorm,kwNorm,textNorm};
+function mostrarLocales(lista){
+  const cont=document.getElementById("resultados");
+  cont.innerHTML="";
+  if(!lista.length){cont.innerHTML="<p>No se encontraron locales.</p>";return;}
+  lista.forEach(l=>{
+    const box=document.createElement("div");
+    box.className="box";
+    if(l.imagen_url){
+      const img=document.createElement("img");
+      img.src=l.imagen_url.trim();
+      img.alt=l.nombre_local;
+      img.className="logo";
+      box.appendChild(img);
+    }
+    const info=document.createElement("div");
+    info.className="info";
+    info.innerHTML=`<div class="name">${l.nombre_local}</div>
+                    <div class="rubro">${l.rubro||""}</div>
+                    <div class="dir">${l.direccion||""}</div>`;
+    box.appendChild(info);
+    cont.appendChild(box);
   });
-  window._BARRIOS=Array.from(barrios);
-  LOADED=true;
-  showStatus("CSV cargado OK · "+DATA.length+" filas.");
-  TSH.textContent="Actualizado: "+new Date().toLocaleTimeString();
 }
 
-// --- LÓGICA DE FRASES ---
-const VERBOS=["comer","almorzar","comprar","buscar","necesito","arreglar","quiero","tomar"];
-const SYNONYMS={
-  comer:["almorzar","cenar","merendar","degustar","probar","comida","gastronomia","restaurante"],
-  almorzar:["comer","menu","plato","comida","gastronomia","almuerzo","almuerzos"],
-  comprar:["adquirir","conseguir","obtener","vender","compras"],
-  libros:["libreria","papeleria","resma","a4","papel"],
-  helado:["heladeria","postre","dulce","palito","copas"],
-  flor:["floreria","flores","ramos","arreglo"],
-  cierre:["costureria","arreglos","sastreria","ropa"],
-  farmacia:["medicamentos","remedios","farmaceutica"]
-};
-
-function detectBarrio(q){if(!window._BARRIOS)return"";if(q.includes("centro")&&!q.includes("microcentro")&&window._BARRIOS.includes("microcentro"))return"microcentro";for(const b of window._BARRIOS){if(q.includes(b))return b;}return"";}
-function detectLocal(q){let match=null;for(const d of DATA){if(!d.nombreNorm)continue;if(q.includes(d.nombreNorm)){if(match&&match!==d)return null;match=d;}}return match;}
-function tokenVariants(t){const v=new Set([t]);if(t.endsWith("s")&&t.length>3)v.add(t.slice(0,-1));if(t.endsWith("es")&&t.length>4)v.add(t.slice(0,-2));return Array.from(v);}
-function isBarrioToken(t){if(!window._BARRIOS)return false;return window._BARRIOS.includes(t);}
-function expandTokens(arr){const out=new Set(arr);for(const t of arr){if(SYNONYMS[t])SYNONYMS[t].forEach(x=>out.add(x));}return Array.from(out);}
-function scoreRow(d,toks,hasVerb){let s=0;for(const t of toks){const vars=tokenVariants(t);for(const v of vars){if(d.nombreNorm.includes(v))s+=4;if(d.rubroNorm.includes(v))s+=hasVerb?7:3;if(d.kwNorm.includes(v))s+=hasVerb?6:2;if(d.textNorm.includes(v))s+=1;}}return s;}
-
-// --- BUSCAR ---
-function buscar(fromText){
-  hideIntent();if(!LOADED){showStatus("Esperá que cargue el CSV…");return;}
-  const raw=(typeof fromText==="string"?fromText:document.getElementById('qall').value).trim();if(!raw){render([],"Escribí o dictá algo.");return;}
-  const q=norm(raw);const hasVerb=VERBOS.some(v=>q.includes(v));
-  const local=detectLocal(q);
-  if(local){const dist=(USER_POS&&isFinite(local.lat)&&isFinite(local.lng))?hav(USER_POS,{lat:local.lat,lng:local.lng}):null;INTENT_HINT.style.display="block";INTENT_HINT.textContent=`🔎 Intención: "${raw}" → local: ${local.nombre}`;render([{row:local.row,dist}],`Mostrando: ${local.nombre}`);return;}
-  const barrioTerm=detectBarrio(q);const allTokens=q.split(/\s+/).filter(t=>t.length>2);const toksNoVerbos=allTokens.filter(t=>!VERBOS.includes(t));if(!toksNoVerbos.length){render([],"Probá con alguna palabra clave, ej: 'helados', 'libros', 'artículos para el hogar'.");return;}
-  const scoringTokensRaw=hasVerb?toksNoVerbos.filter(t=>!isBarrioToken(t)):toksNoVerbos.slice();const verbTokens=allTokens.filter(t=>VERBOS.includes(t));const baseTokens=scoringTokensRaw.length?scoringTokensRaw:toksNoVerbos;const scoringTokens=expandTokens(baseTokens.concat(verbTokens));
-  const out=[];for(const d of DATA){if(barrioTerm&&d.barrioNorm&&!d.barrioNorm.includes(barrioTerm))continue;const sc=scoreRow(d,scoringTokens,hasVerb);if(sc<=0)continue;if(hasVerb){let strong=false;for(const t of scoringTokens){for(const v of tokenVariants(t)){if(d.rubroNorm.includes(v)||d.kwNorm.includes(v)){strong=true;break;}}if(strong)break;}if(!strong)continue;}const dist=(USER_POS&&isFinite(d.lat)&&isFinite(d.lng))?hav(USER_POS,{lat:d.lat,lng:d.lng}):null;out.push({row:d.row,dist,score:sc,nombre:d.nombre});}
-  out.sort((a,b)=>{if(a.dist!=null&&b.dist!=null&&a.dist!==b.dist)return a.dist-b.dist;if(b.score!==a.score)return b.score-a.score;const na=a.nombre||"",nb=b.nombre||"";return na.localeCompare(nb);});
-  if(out.length){let detalle=[];if(hasVerb)detalle.push("intención detectada");if(barrioTerm)detalle.push("zona: "+barrioTerm);if(scoringTokens.length)detalle.push("claves: "+scoringTokens.join(", "));INTENT_HINT.style.display="block";INTENT_HINT.textContent=`🔎 Intención: "${raw}"${detalle.length?" → "+detalle.join(" · "):""}`;}
-  render(out);
+function buscar(){
+  const q=document.getElementById("busqueda").value.trim();
+  if(!q){return;}
+  const query=normalizar(q);
+  const palabras=query.split(/\s+/);
+  const lista=locales.filter(l=>{
+    const texto=normalizar(`${l.nombre_local} ${l.rubro} ${l.keywords} ${l.barrio} ${l.promo_texto}`);
+    return palabras.some(p=>{
+      if(texto.includes(p)) return true;
+      const alt=sinonimos[p];
+      return alt && alt.some(s=>texto.includes(s));
+    });
+  });
+  mostrarLocales(lista);
 }
 
-// --- CERCA ---
-function buscarCerca(){hideIntent();if(!LOADED){showStatus("Esperá que cargue el CSV…");return;}function run(){const list=[];for(const d of DATA){if(!isFinite(d.lat)||!isFinite(d.lng))continue;const dist=hav(USER_POS,{lat:d.lat,lng:d.lng});list.push({row:d.row,dist});}list.sort((a,b)=>a.dist-b.dist);let radius=1.5;let inside=list.filter(o=>o.dist<=radius);if(inside.length<3){radius=3.0;inside=list.filter(o=>o.dist<=radius);}GPS_HINT.style.display='block';GPS_HINT.textContent=`📍 ≤ ${radius.toFixed(1)} km · ${inside.length} resultados`;render(inside);}if(USER_POS){run();return;}if(!navigator.geolocation){USER_POS={lat:-34.6037,lng:-58.3816};GPS_HINT.style.display='block';GPS_HINT.textContent="📍 Sin GPS, usando centro.";run();return;}showStatus("Buscando tu ubicación…");navigator.geolocation.getCurrentPosition(p=>{USER_POS={lat:p.coords.latitude,lng:p.coords.longitude};showStatus("");GPS_HINT.textContent="📍 Ubicación detectada.";run();},()=>{USER_POS={lat:-34.6037,lng:-58.3816};showStatus("");GPS_HINT.textContent="📍 Sin permiso, usando centro.";run();},{enableHighAccuracy:true,timeout:7000});}
+function limpiar(){
+  document.getElementById("busqueda").value="";
+  document.getElementById("resultados").innerHTML="";
+}
 
-// --- RENDER ---
-function render(list,msg){const box=document.getElementById('results');if(!list||!list.length){box.innerHTML=`<div class="tiny">${msg||"Sin resultados."}</div>`;return;}box.innerHTML=list.map(o=>{const r=o.row;const maps=`https://www.google.com/maps/search/?api=1&query=${encodeURIComponent((r.direccion||"")+" "+(r.barrio||""))}`;const dist=(typeof o.dist==="number")?`<div class="meta">≈ ${o.dist.toFixed(2)} km</div>`:"";return `<div class="card"><div class="title">${r.nombre_local||"(sin nombre)"} — <span>${r.rubro||""}</span></div><div>${r.direccion||""} ${r.barrio?`(${r.barrio})`:""}</div>${dist}<div class="meta"><a href="${maps}" target="_blank">Cómo llegar</a></div></div>`;}).join("");}
+function usarVoz(){
+  const recog=new(window.SpeechRecognition||window.webkitSpeechRecognition)();
+  recog.lang="es-AR";
+  recog.start();
+  recog.onresult=e=>{
+    const txt=e.results[0][0].transcript;
+    document.getElementById("busqueda").value=txt;
+    buscar();
+  };
+}
 
-// --- EVENTOS ---
-document.getElementById('goBtn').onclick=()=>buscar();
-document.getElementById('clearBtn').onclick=()=>{document.getElementById('qall').value='';document.getElementById('results').innerHTML='';GPS_HINT.style.display='none';hideIntent();showStatus("");showError("");};
-document.getElementById('locBtn').onclick=buscarCerca;
-document.getElementById('refreshBtn').onclick=loadCSV;
-document.getElementById('autoChk').onchange=e=>{if(e.target.checked){loadCSV();refreshTimer=setInterval(loadCSV,15000);}else{clearInterval(refreshTimer);}};
-document.getElementById('qall').addEventListener('keydown',e=>{if(e.key==="Enter"){e.preventDefault();buscar();}});
+function cerca(){
+  if(!navigator.geolocation){alert("Geolocalización no disponible.");return;}
+  navigator.geolocation.getCurrentPosition(pos=>{
+    const {latitude,longitude}=pos.coords;
+    const lista=locales.filter(l=>{
+      const lat=parseFloat(l.lat),lng=parseFloat(l.lng);
+      if(!lat||!lng) return false;
+      const d=Math.sqrt((lat-latitude)**2+(lng-longitude)**2);
+      return d<0.03;
+    });
+    mostrarLocales(lista);
+  },()=>alert("No se pudo obtener ubicación."));
+}
 
-// --- VOZ ---
-(function(){const b=document.getElementById('micBtn');const SR=window.SpeechRecognition||window.webkitSpeechRecognition;if(!SR){b.disabled=true;b.innerText='🎤—';return;}const rec=new SR();rec.lang='es-AR';rec.continuous=false;rec.interimResults=false;let active=false;b.onclick=()=>{if(active)return;try{rec.start();active=true;b.textContent='⏺️';showStatus("Escuchando…");hideIntent();}catch{}};rec.onresult=e=>{const t=e.results[0][0].transcript||'';const limpio=t.trim();document.getElementById('qall').value=limpio;showStatus("Voz: "+limpio);buscar(limpio);};rec.onend=()=>{active=false;b.textContent='🎤';showStatus("");};})();
-loadCSV();
+document.getElementById("buscarBtn").onclick=buscar;
+document.getElementById("vozBtn").onclick=usarVoz;
+document.getElementById("cercaBtn").onclick=cerca;
+document.getElementById("limpiarBtn").onclick=limpiar;
+
+cargarCSV();
 </script>
 </body>
 </html>
