--- a/index.html
+++ b/index.html
@@ -4,82 +4,39 @@
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Aquí Nomás — DEMO inteligente (sinónimos + fallback CSV + imágenes)</title>
-<!--ID_SYS:AQNM_20251110_V5-->
+<!--ID_SYS:AQNM_20251110_V4_1-->
 <style>
-:root {
-  --pri:#0b5cff;
-  --bg:#f2f4f8;
-}
-body {
+:root{--pri:#0b5cff;}
+body{
   font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
   margin:0;
-  background:var(--bg);
+  background:#f7f9fb;
   color:#0b1220;
 }
-.wrap {
+.wrap{
   max-width:900px;
   margin:0 auto;
   padding:16px;
 }
-h1 {
+h1{
   font-size:22px;
   margin:0 0 12px;
 }
-.box {
-  background:#fff;
-  border:1px solid #e2e8f0;
-  border-radius:14px;
-  padding:12px 14px;
-  margin-bottom:14px;
-  box-shadow:0 2px 8px rgba(0,0,0,0.06);
-  display:flex;
-  align-items:center;
-  gap:12px;
-  transition:transform .15s ease,box-shadow .15s ease;
-}
-.box:hover {
-  transform:translateY(-2px);
-  box-shadow:0 4px 12px rgba(0,0,0,0.1);
-}
-.logo {
-  width:60px;
-  height:60px;
-  border-radius:50%;
-  object-fit:cover;
-  flex-shrink:0;
-  border:1px solid #d0d7de;
-  background:#fafafa;
-}
-.info {
-  flex:1;
-}
-.name {
-  font-weight:600;
-  color:#0b1220;
-}
-.rubro {
-  font-size:14px;
-  color:#555;
-}
-.dir {
-  font-size:13px;
-  color:#777;
-}
-.row {
+.row{
   display:flex;
   flex-wrap:wrap;
   gap:8px;
   align-items:center;
   margin-bottom:10px;
 }
-.input {
+.input{
   flex:1 1 200px;
   padding:10px 12px;
   border-radius:8px;
   border:1px solid #cbd5e1;
   font-size:15px;
 }
-button {
+button{
   background:var(--pri);
   color:#fff;
   border:none;
@@ -88,8 +45,50 @@ button {
   font-size:15px;
   cursor:pointer;
 }
-button:hover {opacity:.9;}
-small {display:block;color:#666;margin-top:8px;font-size:13px;}
+button:hover{opacity:.9;}
+small{
+  display:block;
+  color:#666;
+  margin-top:8px;
+  font-size:13px;
+}
+#resultados{
+  margin-top:12px;
+}
+.box{
+  background:#fff;
+  border:1px solid #e2e8f0;
+  border-radius:12px;
+  padding:10px 12px;
+  margin-bottom:10px;
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+.logo{
+  width:56px;
+  height:56px;
+  border-radius:50%;
+  object-fit:cover;
+  flex-shrink:0;
+  border:1px solid #d0d7de;
+  background:#f8fafc;
+}
+.info{
+  flex:1;
+}
+.name{
+  font-weight:600;
+  margin-bottom:2px;
+}
+.rubro{
+  font-size:14px;
+  color:#555;
+}
+.dir{
+  font-size:13px;
+  color:#777;
+}
 </style>
 </head>
 <body>
@@ -108,12 +107,17 @@ small {display:block;color:#666;margin-top:8px;font-size:13px;}
 
 <script>
 let locales = [];
-let sinonimos = {"almorzar":["comer","almuerzo","restaurante","plato del día"],
-                 "café":["cafetería","bar","espresso"],
-                 "helado":["postre","heladería"]};
+
+const sinonimos = {
+  "almorzar":["comer","almuerzo","restaurante","menu del dia","plato del dia"],
+  "cafe":["cafeteria","bar","espresso"],
+  "helado":["postre","heladeria"]
+};
 
 function normalizar(txt){
-  return txt.toLowerCase().normalize("NFD").replace(/[\u0300-\u036f]/g,"");
+  return txt.toLowerCase()
+            .normalize("NFD")
+            .replace(/[\u0300-\u036f]/g,"");
 }
 
 async function cargarCSV(){
@@ -124,8 +128,8 @@ async function cargarCSV(){
     const filas = texto.trim().split("\n").map(f=>f.split(","));
     const cab = filas.shift().map(c=>c.trim());
     locales = filas.map(f=>{
-      let obj={};
-      cab.forEach((c,i)=>obj[c]=f[i]);
+      const obj = {};
+      cab.forEach((c,i)=>{ obj[c] = f[i] || ""; });
       return obj;
     });
     console.log("CSV cargado:",locales.length,"filas");
@@ -135,79 +139,102 @@ async function cargarCSV(){
 }
 
 function mostrarLocales(lista){
-  const cont=document.getElementById("resultados");
-  cont.innerHTML="";
-  if(!lista.length){cont.innerHTML="<p>No se encontraron locales.</p>";return;}
+  const cont = document.getElementById("resultados");
+  cont.innerHTML = "";
+  if(!lista.length){
+    cont.innerHTML = "<p>No se encontraron locales.</p>";
+    return;
+  }
   lista.forEach(l=>{
-    const box=document.createElement("div");
-    box.className="box";
-    if(l.imagen_url){
-      const img=document.createElement("img");
-      img.src=l.imagen_url.trim();
-      img.alt=l.nombre_local;
-      img.className="logo";
+    const box = document.createElement("div");
+    box.className = "box";
+
+    const url = (l.imagen_url || "").trim();
+    if(url){
+      const img = document.createElement("img");
+      img.className = "logo";
+      img.src = url;
+      img.alt = l.nombre_local || "Imagen del local";
       box.appendChild(img);
     }
-    const info=document.createElement("div");
-    info.className="info";
-    info.innerHTML=`<div class="name">${l.nombre_local}</div>
-                    <div class="rubro">${l.rubro||""}</div>
-                    <div class="dir">${l.direccion||""}</div>`;
+
+    const info = document.createElement("div");
+    info.className = "info";
+    info.innerHTML = `
+      <div class="name">${l.nombre_local || ""}</div>
+      <div class="rubro">${l.rubro || ""}</div>
+      <div class="dir">${l.direccion || ""}</div>
+    `;
     box.appendChild(info);
     cont.appendChild(box);
   });
 }
 
 function buscar(){
-  const q=document.getElementById("busqueda").value.trim();
-  if(!q){return;}
-  const query=normalizar(q);
-  const palabras=query.split(/\s+/);
-  const lista=locales.filter(l=>{
-    const texto=normalizar(`${l.nombre_local} ${l.rubro} ${l.keywords} ${l.barrio} ${l.promo_texto}`);
+  const q = document.getElementById("busqueda").value.trim();
+  if(!q) return;
+  const query = normalizar(q);
+  const palabras = query.split(/\s+/);
+
+  const lista = locales.filter(l=>{
+    const texto = normalizar(
+      `${l.nombre_local} ${l.rubro} ${l.keywords} ${l.barrio} ${l.promo_texto}`
+    );
     return palabras.some(p=>{
       if(texto.includes(p)) return true;
-      const alt=sinonimos[p];
+      const alt = sinonimos[p];
       return alt && alt.some(s=>texto.includes(s));
     });
   });
+
   mostrarLocales(lista);
 }
 
 function limpiar(){
-  document.getElementById("busqueda").value="";
-  document.getElementById("resultados").innerHTML="";
+  document.getElementById("busqueda").value = "";
+  document.getElementById("resultados").innerHTML = "";
 }
 
 function usarVoz(){
-  const recog=new(window.SpeechRecognition||window.webkitSpeechRecognition)();
-  recog.lang="es-AR";
+  const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
+  if(!SR){
+    alert("Tu navegador no soporta reconocimiento de voz.");
+    return;
+  }
+  const recog = new SR();
+  recog.lang = "es-AR";
   recog.start();
-  recog.onresult=e=>{
-    const txt=e.results[0][0].transcript;
-    document.getElementById("busqueda").value=txt;
+  recog.onresult = e=>{
+    const txt = e.results[0][0].transcript;
+    document.getElementById("busqueda").value = txt;
     buscar();
   };
 }
 
 function cerca(){
-  if(!navigator.geolocation){alert("Geolocalización no disponible.");return;}
+  if(!navigator.geolocation){
+    alert("Geolocalización no disponible en este dispositivo.");
+    return;
+  }
   navigator.geolocation.getCurrentPosition(pos=>{
-    const {latitude,longitude}=pos.coords;
-    const lista=locales.filter(l=>{
-      const lat=parseFloat(l.lat),lng=parseFloat(l.lng);
-      if(!lat||!lng) return false;
-      const d=Math.sqrt((lat-latitude)**2+(lng-longitude)**2);
-      return d<0.03;
+    const {latitude,longitude} = pos.coords;
+    const lista = locales.filter(l=>{
+      const lat = parseFloat(l.lat);
+      const lng = parseFloat(l.lng);
+      if(!lat || !lng) return false;
+      const d = Math.sqrt((lat-latitude)**2 + (lng-longitude)**2);
+      return d < 0.03; // mismo umbral que antes
     });
     mostrarLocales(lista);
-  },()=>alert("No se pudo obtener ubicación."));
+  },()=>{
+    alert("No se pudo obtener tu ubicación.");
+  });
 }
 
-document.getElementById("buscarBtn").onclick=buscar;
-document.getElementById("vozBtn").onclick=usarVoz;
-document.getElementById("cercaBtn").onclick=cerca;
-document.getElementById("limpiarBtn").onclick=limpiar;
+document.getElementById("buscarBtn").onclick = buscar;
+document.getElementById("vozBtn").onclick = usarVoz;
+document.getElementById("cercaBtn").onclick = cerca;
+document.getElementById("limpiarBtn").onclick = limpiar;
 
 cargarCSV();
 </script>
