--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (sinónimos + fallback CSV + imágenes)</title>
-<!--ID_SYS:AQNM_20251110_V3_IMG-->
+<title>Aquí Nomás — DEMO inteligente (sinónimos + fallback CSV + imágenes FIX)</title>
+<!--ID_SYS:AQNM_20251110_V3_IMG_FIX-->
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -63,8 +63,9 @@ function mostrarResultados(resultados){
     const div=document.createElement("div");
     div.className="resultado";
     const img=document.createElement("img");
-    img.src=loc.imagen_url || "";
-    img.alt=loc.nombre_local || "imagen";
+    const ruta=(loc.imagen_url||"").trim();  // fix de espacios o saltos
+    img.src=ruta;
+    img.alt=loc.nombre_local||"imagen";
     div.appendChild(img);
     const texto=document.createElement("div");
     texto.innerHTML=`<strong>${loc.nombre_local}</strong><br>${loc.rubro}<br>${loc.direccion}<br>${loc.promo_texto||""}`;
