--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (V3 IMG ESTABLE2)</title>
-<!--ID_SYS:AQNM_20251110_V3_IMG_ESTABLE2-->
+<title>Aquí Nomás — DEMO inteligente (V3 IMG ESTABLE3)</title>
+<!--ID_SYS:AQNM_20251110_V3_IMG_ESTABLE3-->
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -37,6 +37,9 @@ button:hover{background:#0048d0}
 const sheetURL='https://docs.google.com/spreadsheets/d/e/2PACX-1vSg0UeYMVZj0b9H2V63XS37oXlIwJ6SL4n-m6WJEbspzM5OP9QA3QF6qSw4fr81dw/pub?gid=1861393565&single=true&output=csv';
 let locales=[];
 
+// solo imágenes realmente disponibles en este repo
+const imagenesDisponibles=["hipo.jpg","hipo.jpeg","lahuella.jpg","lahuella.jpeg"];
+
 async function cargarCSV(){
   console.log("Cargando CSV…");
   try{
@@ -64,22 +67,12 @@ function mostrarResultados(resultados){
     const div=document.createElement("div");
     div.className="resultado";
     let ruta=(loc.imagen_url||"").trim();
-    if(ruta){
-      if(!ruta.includes(".")) ruta += ".jpeg";
-      let img=new Image();
-      img.onload=()=>div.prepend(img);
-      img.onerror=()=>{
-        const altImg=new Image();
-        altImg.src=ruta.replace(".jpeg",".jpg");
-        altImg.onerror=()=>{altImg.remove();};
-        div.prepend(altImg);
-      };
+    // si existe y está en la lista de archivos del repo, la muestra
+    if(ruta && imagenesDisponibles.includes(ruta)){
+      const img=document.createElement("img");
       img.src=ruta;
       img.alt=loc.nombre_local||"imagen";
-      img.style.width="100px";
-      img.style.height="100px";
-      img.style.objectFit="cover";
-      img.style.borderRadius="6px";
+      div.appendChild(img);
     }
     const texto=document.createElement("div");
     texto.innerHTML=`<strong>${loc.nombre_local}</strong><br>${loc.rubro}<br>${loc.direccion}<br>${loc.promo_texto||""}`;
