--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (V3 IMG ESTABLE3)</title>
-<!--ID_SYS:AQNM_20251110_V3_IMG_ESTABLE3-->
+<title>Aquí Nomás — DEMO inteligente (V3 IMG ESTABLE4)</title>
+<!--ID_SYS:AQNM_20251110_V3_IMG_ESTABLE4-->
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -37,8 +37,8 @@ button:hover{background:#0048d0}
 const sheetURL='https://docs.google.com/spreadsheets/d/e/2PACX-1vSg0UeYMVZj0b9H2V63XS37oXlIwJ6SL4n-m6WJEbspzM5OP9QA3QF6qSw4fr81dw/pub?gid=1861393565&single=true&output=csv';
 let locales=[];
 
-// solo imágenes realmente disponibles en este repo
-const imagenesDisponibles=["hipo.jpg","hipo.jpeg","lahuella.jpg","lahuella.jpeg"];
+// Archivos reales en este repo
+const imagenesDisponibles=["hipo.jpeg","lahuella.jpg"];
 
 async function cargarCSV(){
   console.log("Cargando CSV…");
@@ -49,7 +49,9 @@ async function cargarCSV(){
     const encabezado=filas.shift().map(h=>h.trim());
     locales=filas.map(f=>{
       let obj={};
-      encabezado.forEach((h,i)=>obj[h]=f[i]?f[i].trim():"");
+      encabezado.forEach((h,i)=>{
+        obj[h]=f[i]?f[i].trim().replace(/\r/g,"").replace(/\n/g,""):"";
+      });
       return obj;
     });
     console.log("CSV cargado:",locales.length,"filas");
@@ -66,8 +68,8 @@ function mostrarResultados(resultados){
   resultados.forEach(loc=>{
     const div=document.createElement("div");
     div.className="resultado";
-    let ruta=(loc.imagen_url||"").trim();
-    // si existe y está en la lista de archivos del repo, la muestra
+    // limpieza completa del nombre de archivo
+    let ruta=(loc.imagen_url||"").trim().replace(/\r/g,"").replace(/\n/g,"");
     if(ruta && imagenesDisponibles.includes(ruta)){
       const img=document.createElement("img");
       img.src=ruta;
