--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (V3 IMG FINALURL)</title>
-<!--ID_SYS:AQNM_20251110_V3_IMG_FINALURL-->
+<title>Aquí Nomás — DEMO inteligente (V3 IMG URL FINAL)</title>
+<!--ID_SYS:AQNM_20251110_V3_IMG_URL_FINAL-->
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -66,10 +66,12 @@ function mostrarResultados(resultados){
     const div=document.createElement("div");
     div.className="resultado";
     const url=(loc.imagen_url||"").trim();
-    if(url && url.startsWith("http")){
-      const img=document.createElement("img");
-      img.src=url;
-      img.alt=loc.nombre_local||"imagen";
+    if(url){
+      const cleanUrl = decodeURIComponent(url.trim());
+      const img = document.createElement("img");
+      img.src = cleanUrl;
+      img.alt = loc.nombre_local || "imagen";
+      img.onerror = () => img.style.display = "none";
       div.appendChild(img);
     }
     const texto=document.createElement("div");
