--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente (V3 estable + IMG + Enter)</title>
-<!--ID_SYS:AQNM_20251110_V3_IMG_ON_FINAL-->
+<title>Aquí Nomás — DEMO inteligente (V3 IMG ON FULLSTABLE)</title>
+<!--ID_SYS:AQNM_20251110_V3_IMG_ON_FULLSTABLE-->
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -36,12 +36,32 @@ button:hover{background:#0048d0}
 const sheetURL='https://docs.google.com/spreadsheets/d/e/2PACX-1vSg0UeYMVZj0b9H2V63XS37oXlIwJ6SL4n-m6WJEbspzM5OP9QA3QF6qSw4fr81dw/pub?gid=1861393565&single=true&output=csv';
 let locales=[];
 
+// --- parser robusto que respeta comillas ---
+function parseCSV(text){
+  const rows=[];
+  let row=[],cur="",inQuotes=false;
+  for(let i=0;i<text.length;i++){
+    const c=text[i];
+    if(c==='"'){
+      if(inQuotes && text[i+1]==='"'){cur+='"';i++;}
+      else inQuotes=!inQuotes;
+    }else if(c===',' && !inQuotes){
+      row.push(cur);cur="";
+    }else if((c==='\n'||c==='\r') && !inQuotes){
+      if(cur!==""||row.length){row.push(cur);rows.push(row);row=[];cur="";}
+      if(c==='\r' && text[i+1]==='\n') i++;
+    }else cur+=c;
+  }
+  if(cur!==""||row.length){row.push(cur);rows.push(row);}
+  return rows;
+}
+
 async function cargarCSV(){
   console.log("Cargando CSV…");
   try{
     const resp=await fetch(sheetURL);
     const data=await resp.text();
-    const filas=data.split("\n").map(r=>r.split(","));
+    const filas=parseCSV(data);
     const encabezado=filas.shift().map(h=>h.trim());
     locales=filas.map(f=>{
       let obj={};
@@ -65,7 +85,7 @@ function mostrarResultados(resultados){
     const div=document.createElement("div");
     div.className="resultado";
 
-    // Imagen desde Google Sheet
+    // imagen si existe URL
     const url=(loc.imagen_url||"").trim();
     if(url && url.startsWith("http")){
       const img=document.createElement("img");
@@ -86,10 +106,10 @@ function buscar(){
   const q=document.getElementById("busqueda").value.toLowerCase();
   if(!q){document.getElementById("resultados").innerHTML="";return;}
   const resultados=locales.filter(l=>
-    l.nombre_local.toLowerCase().includes(q)||
-    l.rubro.toLowerCase().includes(q)||
-    l.keywords.toLowerCase().includes(q)||
-    l.barrio.toLowerCase().includes(q)
+    (l.nombre_local||"").toLowerCase().includes(q)||
+    (l.rubro||"").toLowerCase().includes(q)||
+    (l.keywords||"").toLowerCase().includes(q)||
+    (l.barrio||"").toLowerCase().includes(q)
   );
   mostrarResultados(resultados);
 }
@@ -101,7 +121,9 @@ document.getElementById("btnLimpiar").addEventListener("click",()=>{
   document.getElementById("resultados").innerHTML="";
 });
 document.getElementById("btnVoz").addEventListener("click",()=>{
-  const rec=new(window.SpeechRecognition||window.webkitSpeechRecognition)();
+  const SR=window.SpeechRecognition||window.webkitSpeechRecognition;
+  if(!SR){alert("Tu navegador no soporta reconocimiento de voz.");return;}
+  const rec=new SR();
   rec.lang="es-ES";
   rec.start();
   rec.onresult=e=>{
